# vantage-point

./: .gitattributes  .gitignore  .mcp.json  .mise.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Package.swift  README-CONSOLE.md  README.md  SECURITY.md  audit.toml  cargo.toml  mise.toml
.claude/: rules.md  settings.local.json  worker-files.kdl
.creo/: README.md
.serena/: project.yml
ClaudeTestApp/: ChatViewModel.swift  ClaudeTestApp.swift
ClaudeTestApp.xcodeproj/: project.pbxproj
Vantage/: AppModel.swift  ConsoleView.swift  ContentView.swift  Renderer.swift  VantageApp.swift
Vantage Point/: ChatViewModel.swift  ChatViewModelLegacy.swift  ContentView.swift  ContentViewWithConsole.swift
Vantage Tests/: AllTests.swift  ChatViewModelWorkingDirectoryTests.swift  WorkingDirectoryIntegrationTests.swift
Vantage Vision/: AppModel.swift  ContentView.swift
Vantage.xcodeproj/: SourcesMacAppApp.swift  project.pbxproj  project.pbxproj.backup
VantagePoint/: APILoggingBridge.swift  (+1 more)
apple/: CLAUDE.md
crates/vantage-cli/: Cargo.toml
crates/vantage-cli/src/: main.rs  server.rs
crates/vantage-core/: Cargo.toml
crates/vantage-core/src/: choice.rs  lib.rs  mode.rs
crates/vantage-daemon/: Cargo.toml
crates/vantage-daemon/src/: agent.rs  config.rs  main.rs  mcp.rs  midi.rs  protocol.rs  tray.rs  webview.rs
crates/vantage-daemon/src/daemon/: hub.rs  mod.rs  server.rs
crates/vantage-point/: Cargo.toml
crates/vantage-point/migrations/: 20260220_init.sql
crates/vantage-point/src/: agent.rs  agui.rs  canvas.rs  ccwire.rs  cli.rs  config.rs  db.rs  discovery.rs  file_watcher.rs  lib.rs  main.rs  mcp.rs  midi.rs  naming.rs  notify.rs  platform.rs  port_layout.rs  protocol.rs  resolve.rs  stands.rs  terminal_window.rs  tmux.rs  trace_log.rs  tray.rs  webview.rs
crates/vantage-point/src/capability/: README.md  agent_capability.rs  bonjour_capability.rs  conductor_capability.rs  core.rs  db_capability.rs  eventbus.rs  evolution.rs  mailbox.rs  mailbox_registry.rs  mailbox_remote.rs  midi_capability.rs  mod.rs  msgbox.rs  msgbox_registry.rs  msgbox_remote.rs  params.rs  process_manager_capability.rs  protocol_capability.rs  registry.rs  stand_manager_capability.rs  synergy.rs  synergy_README.md  types.rs  update_capability.rs  whitesnake.rs
crates/vantage-point/src/ccws/: commands.rs  config.rs  mod.rs
crates/vantage-point/src/commands/: app.rs  canvas.rs  canvas_cmd.rs  config.rs  daemon.rs  db_cmd.rs  file_cmd.rs  ge.rs  hd.rs  hd_cmd.rs  lpd8.rs  mailbox_cmd.rs  midi.rs  mod.rs  pane.rs  park.rs  port.rs  port_cmd.rs  process_client.rs  restart.rs  restart_all.rs  sp.rs  sp_cmd.rs  stand_client.rs  start.rs  tmux.rs  tmux_cmd.rs  tui.rs  tui_cmd.rs  update.rs  world.rs  world_cmd.rs
crates/vantage-point/src/creo/: content.rs  event.rs  format.rs  mod.rs  topic.rs  ui.rs
crates/vantage-point/src/daemon/: client.rs  hub.rs  mod.rs  process.rs  protocol.rs  pty_slot.rs  registry.rs  server.rs
crates/vantage-point/src/event_bus/: alias.rs  bus.rs  mod.rs  persistor.rs  projection.rs  validator.rs
crates/vantage-point/src/park/: agent.rs  client.rs  mod.rs
crates/vantage-point/src/process/: capabilities.rs  hub.rs  lane_cmd.rs  lane_spawn_actor.rs  lanes_state.rs  mod.rs  process_runner.rs  project_stands_state.rs  pty.rs  retained.rs  ruby_vm.rs  server.rs  session.rs  stand_spawner.rs  stand_spec.rs  state.rs  tmux_actor.rs  topic.rs  topic_router.rs  unison_server.rs
crates/vantage-point/src/process/routes/: chat.rs  conductor.rs  health.rs  lanes.rs  mod.rs  permission.rs  project_feed.rs  prompt.rs  update.rs  world.rs  ws.rs  ws_terminal.rs
crates/vantage-point/src/protocol/: acp.rs  agui_adapter.rs  messages.rs  mod.rs  vantage.rs
crates/vantage-point/src/screenshot/: compose.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/vantage-point/src/stand/: capabilities.rs  hub.rs  mod.rs  pty.rs  ruby_vm.rs  server.rs  session.rs  state.rs  tmux.rs  unison_server.rs
crates/vantage-point/src/stand/routes/: chat.rs  conductor.rs  health.rs  permission.rs  prompt.rs  ws.rs
crates/vantage-point/src/terminal/: mod.rs  renderer.rs  state.rs
crates/vantage-point/src/tui/: app.rs  bridge.rs  canvas_state.rs  draw.rs  input.rs  mod.rs  overlay.rs  project_context.rs  session.rs  terminal_widget.rs  theme.rs
crates/vantage-point/src/world/: conductor.rs  db.rs  ge.rs  ger.rs  mcp.rs  midi.rs  mod.rs  server.rs
crates/vantage-tui/: Cargo.toml
crates/vantage-tui/src/: api.rs  claude_cli.rs  daemon.rs  main.rs  session.rs  tools.rs
crates/vp-app/: Cargo.toml
crates/vp-app/assets/: creo-components.css  creo-tokens.css  editor-host.bundle.js  nerd-font-loader.js  nerd-font.css  sidebar-icons.bundle.js
crates/vp-app/sidebar-bundle/: build.mjs  entry.ts  package.json
crates/vp-app/src/: app.rs  client.rs  daemon_launcher.rs  lane.rs  lib.rs  log_format.rs  main.rs  main_area.rs  menu.rs  pane.rs  session_state.rs  settings.rs  shell_detect.rs  terminal.rs  tray.rs  web_assets.rs  ws_terminal.rs
crates/vp-app/web-bundle/: build.mjs  entry.tsx  package.json  tsconfig.json
crates/vp-app/web-bundle/icons/: lane.ts  mailbox.ts  stand.ts  theworld.ts
crates/vp-bridge/: Cargo.toml
crates/vp-bridge/include/: vp_bridge.h
crates/vp-bridge/src/: backend.rs  ffi.rs  lib.rs  pty.rs  types.rs
crates/vp-ccws/: Cargo.toml  README.md
crates/vp-ccws/src/: commands.rs  lib.rs  main.rs
crates/vp-cli/: Cargo.toml
crates/vp-cli/src/: lib.rs  main.rs
crates/vp-cli/src/ccws/: commands.rs
crates/vp-db/: Cargo.toml
crates/vp-db/src/: lib.rs  platform.rs
crates/vp-mdast/: Cargo.toml
crates/vp-mdast-wasm/: Cargo.toml
crates/vp-mdast-wasm/src/: lib.rs
crates/vp-mdast/src/: lib.rs  nodes.rs  parser.rs
crates/vp-shell/: Cargo.toml
crates/vp-shell/assets/: creo-components.css  creo-tokens.css
crates/vp-shell/src/: app.rs  client.rs  lib.rs  main.rs  menu.rs  terminal.rs
repos/claude-integration/: .gitignore  Cargo.toml
repos/claude-integration/src/: error.rs  lib.rs  rate_limit.rs
(+251 files in other folders)
