[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Makoto"]
license = "MIT"
repository = "https://github.com/chronista-club/vantage-point"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async streams
futures = "0.3"
tokio-stream = "0.1"

# QUIC protocol (Unison)
unison = { git = "https://github.com/chronista-club/unison.git" }

# Database (future)
# surrealdb = "2"

