[package]
name = "vantage-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vantage"
path = "src/main.rs"

[dependencies]
vantage-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
