[package]
name = "vantage-point"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI-powered development platform with Agent and MIDI services"

[[bin]]
name = "vp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web server
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["fs", "cors"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async utilities
futures = { workspace = true }
tokio-util = "0.7"

# HTTP client (for MCP to communicate with Stand)
reqwest = { workspace = true }

# MCP (Model Context Protocol)
rmcp = { version = "0.11", features = ["server", "transport-io"] }
schemars = "1"

# Native WebView
wry = { version = "0.53", features = ["devtools"] }
tao = "0.34"

# Open URLs in system browser
open = "5"

# Configuration
toml = "0.8"
dirs = "6"

# Menu (for native menu bar on macOS)
muda = "0.17"

# System tray icon
tray-icon = "0.21"

# MIDI input
midir = "0.10"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# mDNS Service Discovery (Bonjour)
mdns-sd = "0.17"

# Hostname
hostname = "0.4"
libc = "0.2.178"

# PTY (pseudo-terminal) for shell sessions
portable-pty = "0.9"

# Base64 encoding (for PTY binary I/O over WebSocket)
base64 = "0.22"

# Terminal emulation (VT parser + grid state)
alacritty_terminal = "0.25"
vte = "0.15"

# WebSocket client (sync, for native terminal bridge)
tungstenite = "0.26"

# macOS native APIs (split window, NSView for terminal pane)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSAttributedString",
    "NSDictionary",
    "NSObject",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSResponder",
    "NSView",
    "NSColor",
    "NSWindow",
    "NSText",
    "NSTextView",
    "NSScrollView",
    "NSClipView",
    "NSFont",
    "NSFontDescriptor",
    "NSAttributedString",
    "NSGraphics",
    "NSGraphicsContext",
    "NSStringDrawing",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGColor", "CGContext"] }
