[package]
name = "vantage-point"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI-powered development platform with Agent and MIDI services"

[lib]
name = "vantage_point"
path = "src/lib.rs"

[features]
# Daemon-only build (Linux の GTK/ALSA 無し環境で通す) は
# `--no-default-features` で gui + midi を外す。
default = ["gui", "midi"]
gui = ["dep:tao", "dep:muda", "dep:tray-icon"]
midi = ["dep:midir"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web server
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["fs", "cors"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async utilities
futures = { workspace = true }
tokio-util = "0.7"

# Unicode 正規化（ペースト sanitize 用、NFD → NFC）
unicode-normalization = "0.1"

# URL encoding (msg_directory project_name パラメータ用)
urlencoding = "2"

# HTTP client (for MCP to communicate with Process)
reqwest = { workspace = true }

# MCP (Model Context Protocol)
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"

# QUIC protocol (Unison)
unison = { workspace = true }

# GUI stack (feature = "gui" 有効時のみ有効化)
tao = { version = "0.34", optional = true }
muda = { version = "0.17", optional = true }
tray-icon = { version = "0.21", optional = true }

# Open URLs in system browser
open = "5"

# Configuration
toml = "0.8"
dirs = "6"

# MIDI input (feature = "midi" 有効時のみ、ALSA 依存回避のため optional)
midir = { version = "0.10", optional = true }

# UUID generation (v7 for time-ordered Event ids; serde for wire format)
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# mDNS Service Discovery (Bonjour)
mdns-sd = "0.18"

# Hostname
hostname = "0.4"
libc = "0.2.178"

# TLS (QUIC サーバーの CryptoProvider 初期化用)
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# PTY (pseudo-terminal) for shell sessions
portable-pty = "0.9"

# Base64 encoding (for PTY binary I/O over WebSocket)
base64 = "0.22"

# WebSocket client (for Canvas Lane bridge to other Processes)
tokio-tungstenite = "0.26"

# File system watcher (for trace log → WebSocket broadcast)
notify = "8"

# Regex (for log level filtering in file watcher)
regex = "1"

# Phase L7d: rusqlite dep 削除 — ccwire.rs 除去で不要に
# (msgbox / Mailbox は SurrealDB に統一)
# rusqlite = { workspace = true }

# SurrealDB (状態管理 + Mailbox の統一データベース)
surrealdb = { workspace = true }

# Terminal emulation (VT parser + grid state)
alacritty_terminal = "0.25"
vte = "0.15"

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# TUI Canvas extensions
tui-markdown = "0.3"
tui-scrollview = "0.6"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }


# macOS native APIs (split window, NSView for terminal pane)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSAttributedString",
    "NSDictionary",
    "NSObject",
    "NSNotification",
    "NSDistributedNotificationCenter",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSResponder",
    "NSView",
    "NSColor",
    "NSWindow",
    "NSText",
    "NSTextView",
    "NSScrollView",
    "NSClipView",
    "NSFont",
    "NSFontDescriptor",
    "NSAttributedString",
    "NSGraphics",
    "NSGraphicsContext",
    "NSStringDrawing",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGColor", "CGContext"] }

[dev-dependencies]
tempfile = "3.27.0"
