[package]
name = "vp-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vantage Point native app — Rust-native window/tray/menu over TheWorld daemon"

[[bin]]
name = "vp-app"
path = "src/main.rs"

[lib]
name = "vp_app"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Native window + WebView (crossplat: macOS/Windows/Linux)
wry = { version = "0.54", features = ["devtools"] }
tao = "0.34"

# Menu + tray (crossplat)
muda = "0.17"
tray-icon = "0.21"

# HTTP client (TheWorld API)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Toast notifications (crossplat; WinRT on Windows, libnotify on Linux, NSUserNotificationCenter on macOS)
notify-rust = "4"

# PTY (pseudo-terminal) for shell sessions — ConPTY on Windows, forkpty on Unix
portable-pty = "0.9"

# Base64 encoding (for PTY binary I/O over wry IPC)
base64 = "0.22"

# VP_SHELL_ARGS のシェル風クォート split
shell-words = "1.1"

# VP-93 Step 2a: daemon 経由 terminal (WebSocket client)
tokio-tungstenite = "0.24"
futures-util = "0.3"
