[package]
name = "vp-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vantage Point native app — Rust-native window/tray/menu over TheWorld daemon"

[[bin]]
name = "vp-app"
path = "src/main.rs"

[lib]
name = "vp_app"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Native window + WebView (crossplat: macOS/Windows/Linux)
# Phase 5-C (2026-04-28): wry 0.54 → 0.55 (custom protocol + WKWebView origin handling 改善期待)、tao 0.34 → 0.35
wry = { version = "0.55", features = ["devtools"] }
tao = "0.35"

# Menu + tray (crossplat)
muda = "0.17"
tray-icon = "0.21"

# HTTP client (TheWorld API)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Toast notifications (crossplat; WinRT on Windows, libnotify on Linux, NSUserNotificationCenter on macOS)
notify-rust = "4"

# PTY (pseudo-terminal) for shell sessions — ConPTY on Windows, forkpty on Unix
portable-pty = "0.9"

# Base64 encoding (for PTY binary I/O over wry IPC)
base64 = "0.22"

# VP_SHELL_ARGS のシェル風クォート split
shell-words = "1.1"

# VP-93 Step 2a: daemon 経由 terminal (WebSocket client)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Terminal clipboard (native OS clipboard fallback for WebView2)
arboard = "3"

# Pane id 用 UUID (VP-95)
uuid = { version = "1", features = ["v4", "serde"] }

# Settings 永続化 (VP-100 follow-up: 開発者モード等)
toml = "0.8"
dirs = "6"

# Phase 5-D fix: daemon_launcher で setsid(2) を呼ぶため (Unix で TheWorld を真の daemon 化、
#  vp-app 死亡時に SIGHUP 巻き添えで TheWorld も死ぬ問題の修正)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# 構造化ログ用 timestamp (KDL 1-line formatter)
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Log file writer (Win GUI subsystem では stderr が NUL 化することがあるので file に直接書く)
tracing-appender = "0.2"

# Native folder picker (project 追加用、cross-platform)
rfd = "0.15"
