[package]
name = "vp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vantage Point CLI — AI ネイティブ開発環境の CLI エントリーポイント"

[[bin]]
name = "vp"
path = "src/main.rs"

# Phase 2.x-e: 旧 vp-ccws crate を統合。 後方互換 (CLAUDE.md 等で `ccws new` 等を常用) のため
# `ccws` 標準 binary を vp-cli から提供。 中身は `vp_cli::ccws` lib を呼ぶだけ。
[[bin]]
name = "ccws"
path = "src/bin/ccws.rs"

[lib]
name = "vp_cli"
path = "src/lib.rs"

[features]
default = ["gui", "midi"]
gui = ["vantage-point/gui"]
midi = ["vantage-point/midi"]

[dependencies]
vantage-point = { path = "../vantage-point", default-features = false }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
# VP-69 Stone Free Phase 2: worker actor を TheWorld に register/unregister
reqwest = { workspace = true }
serde_json = { workspace = true }
# Phase 2.x-e: 旧 vp-ccws crate の deps を継承 (config.rs の KDL parse + commands.rs の glob)
unison-kdl = { workspace = true }
glob = { workspace = true }
