[package]
name = "vp-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vantage Point 用 SurrealDB 統合レイヤ (VpDb / schema / CRUD)"

[lib]
name = "vp_db"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# SurrealDB (本体)
surrealdb = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID (DB password random 生成)
uuid = { version = "1", features = ["v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Config dir (db data / pass file の置き場)
dirs = "6"

# libc (Unix 系 permission 操作)
libc = "0.2"

[dev-dependencies]
tempfile = "3"
